# harness-dashboard

./: .env.example  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  NOTICE  README.md  components.json  eslint.config.mjs  package.json  pnpm-lock.yaml  prettier.config.mjs  pricing.json  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
apps/web/: components.json  next.config.ts  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
apps/web/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
apps/web/app/ai-impact/: page.tsx
apps/web/app/allocation/: page.tsx
apps/web/app/devex/: page.tsx
apps/web/app/dora/: page.test.tsx  page.tsx
apps/web/app/onboarding/: page.test.tsx
apps/web/app/productivity/: page.test.tsx  page.tsx
apps/web/app/projects/: page.test.tsx  page.tsx
apps/web/app/prompts/: page.test.tsx  page.tsx
apps/web/app/pull-requests/: page.test.tsx  page.tsx
apps/web/app/rtk/: page.test.tsx  page.tsx
apps/web/app/sessions/: page.test.tsx  page.tsx
apps/web/app/settings/: page.test.tsx  page.tsx
apps/web/app/skills/: page.test.tsx  page.tsx
apps/web/app/subagents/: page.test.tsx  page.tsx
apps/web/app/team/: page.tsx
apps/web/app/tips/: page.test.tsx  page.tsx
apps/web/app/tools/: page.test.tsx  page.tsx
apps/web/app/workspaces/: page.test.tsx  page.tsx
apps/web/components/: commits-table.test.tsx  commits-table.tsx  data-table.test.tsx  data-table.tsx  google-connect.test.tsx  google-connect.tsx  i18n-provider.tsx  integration-logo.tsx  integrations-settings.test.tsx  integrations-settings.tsx  kpi-card.test.tsx  kpi-card.tsx  overview-stats.test.tsx  overview-stats.tsx  path-display.test.tsx  path-display.tsx  provider-badge.tsx  provider-selection-required.tsx  provider-selector.tsx  providers.test.tsx  providers.tsx  states.test.tsx  states.tsx  stats-card1.tsx  stats-card2.tsx
apps/web/components/charts/: activity-heatmap.test.tsx  activity-heatmap.tsx  ai-split-chart.tsx  calendar-heatmap.test.tsx  calendar-heatmap.tsx  daily-chart.tsx  insight-charts.tsx  productive-hours-heatmap.test.tsx  productive-hours-heatmap.tsx
apps/web/components/ingest/: ingest-gate.tsx  ingest-pill.tsx  ingest-status-panel.tsx  ingest-ui.test.tsx
apps/web/components/integrations/: github-progress.test.tsx  github-progress.tsx  github-repo-picker.test.tsx  github-repo-picker.tsx  github-sync-settings.test.tsx  github-sync-settings.tsx  integration-gallery.tsx
apps/web/components/onboarding/: onboarding-flow.test.tsx  onboarding-flow.tsx  onboarding-gate.test.tsx  onboarding-gate.tsx
apps/web/components/settings/: integration-card.tsx
apps/web/components/shell/: app-shell.test.tsx  app-shell.tsx  app-sidebar.test.tsx  app-sidebar.tsx  date-range-picker.test.tsx  date-range-picker.tsx  language-switcher.test.tsx  language-switcher.tsx  nav.ts  range-selector.test.tsx  range-selector.tsx  realtime-toggle.test.tsx  realtime-toggle.tsx  scan-status.test.tsx  scan-status.tsx  theme-toggle.test.tsx  theme-toggle.tsx
apps/web/components/ui/: button.tsx  calendar.tsx  chart.tsx  dropdown-menu.tsx  searchable-select.tsx
apps/web/e2e/: app.spec.ts  global-setup.ts  nav.spec.ts  pull-requests.spec.ts  security-auth.spec.ts  static-server.mjs  support.ts
apps/web/e2e/fixture/projects/myproj/: s1.jsonl  s2.jsonl
apps/web/hooks/: ingest.test.tsx  ingest.tsx  scan-sync.test.tsx  scan-sync.tsx  use-api.test.tsx  use-api.ts  use-mobile.test.tsx  use-stream.test.tsx  use-stream.ts
apps/web/lib/: activity-grid.test.ts  activity-grid.ts  api-auth.ts  api-base.test.ts  api-base.ts  api.test.ts  api.ts  format.test.ts  format.ts  github.test.ts  github.ts  heatmap.test.ts  heatmap.ts  pr-session-correlation.test.ts  pr-session-correlation.ts  productivity-grid.test.ts  productivity-grid.ts  provider-filter.test.tsx  provider-filter.tsx  providers.tsx  range.test.tsx  range.tsx  test-utils.tsx  types.ts
apps/web/lib/i18n/: config.ts  locale-integrity.test.ts
apps/web/lib/i18n/locales/: de.json  en.json  es.json  ja.json  nl.json  pt.json  zh.json
crates/harness-core/: Cargo.toml
crates/harness-core/src/: error.rs  lib.rs  model.rs  paths.rs  pricing.rs  provider_adapters.rs  secrets.rs
crates/harness-core/src/calendar/: mod.rs
crates/harness-core/src/db/: ai_impact.rs  authors.rs  calendar.rs  dora.rs  git.rs  incidents.rs  insights.rs  mod.rs  pr_dashboard.rs  queries.rs  schema.rs  survey.rs
crates/harness-core/src/git/: mod.rs
crates/harness-core/src/github/: mod.rs
crates/harness-core/src/jsonl/: mod.rs
crates/harness-core/src/scan/: mod.rs
crates/harness-core/tests/: git_ingest.rs  scan_dedup.rs
crates/harness-server/: Cargo.toml  build.rs
crates/harness-server/src/: auth.rs  calendar.rs  github.rs  main.rs  static_assets.rs
crates/harness-server/src/api/: mod.rs
docs/: KNOWN_LIMITATIONS.md  architecture.md  data-source.md  shadcnblocks-pro-adoption.md
specs/001-harness-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-harness-dashboard/contracts/: api.md
