[package]
name = "harness-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Claude Code transcript scanning, cost analytics, and persistence for harness-dashboard."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
dirs = "5"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
