[package]
name = "harness-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Local AI coding data scanning, cost analytics, metrics, and persistence for harness-dashboard."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rusqlite = { version = "0.40", features = ["bundled"] }
walkdir = "2"
dirs = "6"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
# Local git history reading. `vendored-libgit2` statically links a from-source
# libgit2 (no system git / system libgit2 needed), keeping the single-binary
# promise. default-features=false drops the HTTPS/SSH transports we never use —
# all reads are of local repositories.
git2 = { version = "0.21", default-features = false, features = ["vendored-libgit2"] }
# At-rest encryption for opt-in integration tokens. Pure-Rust (no C deps), so it
# keeps the single-binary promise. getrandom supplies the key/nonce bytes.
aes-gcm = "0.11"
base64 = "0.22"
getrandom = "0.3"

[dev-dependencies]
# Tests construct commits at exact instants; reuse the same chrono the crate uses.
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
