[package]
name = "harness-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "axum HTTP server and `harness-dashboard` binary."

[[bin]]
name = "harness-dashboard"
path = "src/main.rs"

[features]
# When enabled (release builds), the prebuilt Next.js export is embedded into
# the binary and served on the same port as the API. Off by default so debug
# builds don't require `apps/web/out` to exist.
release-embed = []

[dependencies]
harness-core = { path = "../harness-core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
