[package]
name = "harness-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "axum HTTP server and `harness-dashboard` binary."
build = "build.rs"

[[bin]]
name = "harness-dashboard"
path = "src/main.rs"

[features]
# When enabled (release builds), the prebuilt Next.js export (apps/web/out) is
# embedded into the binary and served on the same port as the API. Off by default
# so debug builds don't require `apps/web/out` to exist.
release-embed = ["dep:rust-embed", "dep:mime_guess"]

[dependencies]
harness-core = { path = "../harness-core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }
notify = "8.2.0"
# Opt-in remote integrations (GitHub REST, Google OAuth/Calendar). rustls (not
# OpenSSL) keeps the single static binary; only the server crate is allowed network.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
# Google OAuth (loopback + PKCE).
sha2 = "0.10"
base64 = "0.22"
getrandom = "0.2"
